[package]
name = "icfp2020"
version = "0.1.0"
authors = ["Hayato Ito <hayatoito@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
chrono = "0.4.13"
env_logger = "0.7.1"
log = "0.4.8"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
structopt = "0.3.15"
serde_json = "1.0.56"
regex = "1.3.9"
webbrowser = "0.5.4"
serde = "1.0.114"
